# Genetic-Algorithm-impl

./: .gitignore  CMakeLists.txt  GA_flowchart.drawio  README.md  Rastrigin.cpp  Schwefel.cpp  flow_graph.drawio  func1.cpp  func2.cpp
include/: GA.hpp  GA_BIN.hpp  GA_BIN_func.hpp  GA_BIN_struct.hpp  GA_BIN_wrapper.hpp  tools.hpp
src/: GA.cpp  GA_BIN.cpp  GA_BIN_func.cpp  GA_BIN_struct.cpp  GA_BIN_wrapper.cpp
test/: performance.cpp  test_GA.cpp  test_GA_BIN.cpp
